fix: improve list spacing
Remove a redundant rule (`margin: 0`) and tweak some spacing so that
lists act more like paragraphs and fit more naturally among them.

--- a/scss/_sphinx_base.scss
+++ b/scss/_sphinx_base.scss
@@ -243,7 +243,6 @@ article.determined-ai-article {
   ul,
   ol {
     padding-left: rem(30px);
-    margin: 0;
 
     li {
       margin: 0;
