--- a/scss/shared/_article.scss
+++ b/scss/shared/_article.scss
@@ -90,7 +90,7 @@ article.determined-ai-article {
 
   ul,
   ol{
-    margin: rem(24px) 0 rem(50px) 0;
+    margin: 0 0 rem(18px) 0;
 
     @include desktop {
       padding-left: rem(100px);
